--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write .",
     "post-update": "echo \"codesandbox preview only, need an update\" && pnpm update --latest"
   },
   "dependencies": {
@@ -27,6 +28,7 @@
     "@types/react": "^19.0.0",
     "eslint": "latest",
     "eslint-config-next": "^15.0.0",
+    "prettier": "^3.6.2",
     "typescript": "latest"
   }
 }
